Fixed #71 Help text inside the password field is not completely visible Fixed #67 Shortcut for the quick addition of url Fixed #69 Adding url fails Removed all together search, and /add url option Fixed #49  saving an url fails

--- a/client/assets/app.css
+++ b/client/assets/app.css
@@ -66,7 +66,7 @@ html, body {
 	height: 50px;
 }
 
-.twitter{
+.twitter {
 	display: none;
 }
 
@@ -90,6 +90,10 @@ html, body {
 	white-space: nowrap;
 }
 
+a.article-title > strong {
+	word-wrap: break-word !important;
+}
+
 .card.btn {
 	margin: 4px;
 }
@@ -109,7 +113,7 @@ html, body {
 .card-footer button {
 }
 
-li {
+.side-menu > li {
 	cursor: pointer;
 }
 
@@ -124,4 +128,16 @@ li {
 
 h4 {
 	text-transform: capitalize;
+}
+
+.action-bar {
+	display: none;
+}
+
+.article:hover .action-bar {
+	display: block;
+}
+
+.action-bar span {
+	padding-left: 8px;
 }
